# bearpad-2

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
.github/workflows/: build.yml
src/: App.svelte
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: ContextMenu.svelte  Editor.svelte  SettingsModal.svelte
