[package]
name = "bearpad2"
version = "0.1.4"
description = "Bearpad 2 - CM6 spike"
authors = ["you"]
edition = "2021"

[lib]
name = "bearpad2_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
